21/02/2025 - v.0.0.1 - ouceda - Nuevo p - Se ha añadido una nueva linea

--- a/ESTILOS/Aficiones.css
+++ b/ESTILOS/Aficiones.css
@@ -14,3 +14,12 @@ a {
     display: inline-block;
     margin: 10px;
 }
+p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+fieldset{
+    background-color: #FFFFFF;
+}
+body{
+    background-color: #444444;
+}
